// Database Protocol Buffers schema

syntax = "proto3";
package pb;

message Database {
    string name = 1;
    string description = 2;
    repeated Collection collections = 3;
}

message Collection {
    uint64 id_count = 1;
    string name = 2;
    repeated Document documents = 3;
}

message Document {
    message DataType {
        oneof DataType {
            int32 int32 = 1;
            int64 int64 = 2;
            double decimal = 3;
            bool bool = 4;
            string text = 5;
        }
    }

    uint64 id = 1;
    map<string, DataType> data = 2;
}
